# woodman

./: .gitignore  CMakeLists.txt  Makefile  README.md  SEM.h  demo.py  makefile  mst-backbone.cpp  mstBackbone.h  pyproject.toml  treeplot.R
.github/workflows/: black-autofix.yml  black.yml  blactate.yml  blacter.yml  lindt.yml
data/: Randall_leaf.phyx  Randall_ternary_and_leaves.phyx  ternary_topology.csv
python/emtr/: __init__.py
python/woodman/: llasmotif.py
src/: emtr.cpp  source.cpp
