[build-system]
requires = ["scikit-build-core>=0.11", "pybind11[global]>=2.11", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "woodman"
version = "0.0.1"
description = "Visualizing and Comparing EMTR log likelihood scores for the Randall dataset"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MPL-2.0" }
authors = [{ name = "Prabhav Kalaghatgi", email = "prabhavk@gmail.com" }]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.22",
  "scipy>=1.10",
  "pandas>=2.0"
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov"]

[project.scripts]
emtr = "emtr.cli:main"

[tool.scikit-build]
cmake.version = ">=3.18"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
include = ["emtr", "emtr.*"]
